components/policies/development/konflux-rbac/bootstrap-tenant-namespace/.kyverno-test/resources/expected-networkpolicy_allow-from-console-namespaces.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-console-namespaces
  namespace: labeled-namespace-konflux
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              network.openshift.io/policy-group: console
  podSelector: {}
  policyTypes:
    - Ingress
